--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                <img src="optimistic.PNG" width="100" height="100"/>
+                <img src="optimistic.PNG" width="200" height="200"/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
@@ -94,7 +94,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                <i class="fas fa-4x fa-user-friends"></i>
+                <img src="different.jpg" width="200" height="200"/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
@@ -110,7 +110,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                <i class="fas fa-5x fa-running"></i>
+                <img src="give.jpg" width="200" height="200"/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
@@ -125,7 +125,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                <i class="fas fa-5x fa-child"></i>
+                <img src="alturism.PNG" width="200" height="200"/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
