--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-contact-items-container">
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-user-tag tm-contact-item-icon"></i>
+                <img src="talented.PNG" width ="100" height="100"/>
                 <p class="mb-0">
                   I'm talented girl. I can do almost everything.
                   I believe that my abiliies could make others see me.
@@ -158,7 +158,7 @@ https://templatemo.com/tm-530-mini-profile
                 </p>
               </div>
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-trophy tm-contact-item-icon"></i>
+                <img src="ach.PNG" width ="100" height="100"/>
                 <p class="mb-0">
                   A lot of achievements make others know who am I.
                   I’ve to be brave than others. Don’t complain. 
@@ -167,7 +167,7 @@ https://templatemo.com/tm-530-mini-profile
               </div>
 
               <div class="tm-contact-item">
-                <i class="fas fa-5x fa-people-carry tm-contact-item-icon"></i>
+                <img src="help.jpg" width ="100" height="100"/>
                 <p class="mb-0">
                   Keep helping others. I’ve to keep helping many people out there. 
                   Because when the other people happy, I feel I’m a successful girl.
