--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ https://templatemo.com/tm-530-mini-profile
   </head>
   <body>
     <!-- Welcome Section -->
-    img {align-items : center}
+    <style> img {align-items : center} </style>
     <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-01.jpg">
       <div class="container-fluid tm-brand-container-outer">
         <div class="row">
