--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ https://templatemo.com/tm-530-mini-profile
   </head>
   <body>
     <!-- Welcome Section -->
-    <style> img {align-items : center} </style>
     <section id="tmWelcome" class="parallax-window" data-parallax="scroll" data-image-src="img/mini-profile-bg-01.jpg">
       <div class="container-fluid tm-brand-container-outer">
         <div class="row">
@@ -150,7 +149,7 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-contact-items-container">
               <div class="tm-contact-item">
-                <img src="talented.PNG" width ="100" height="100"/>
+                <img src="talented.PNG" width ="100" height="100" style="align-items : center"/>
                 <p class="mb-0">
                   I'm talented girl. I can do almost everything.
                   I believe that my abiliies could make others see me.
@@ -158,7 +157,7 @@ https://templatemo.com/tm-530-mini-profile
                 </p>
               </div>
               <div class="tm-contact-item">
-                <img src="ach.PNG" width ="100" height="100"/>
+                <img src="ach.PNG" width ="100" height="100" style="align-items : center"/>
                 <p class="mb-0">
                   A lot of achievements make others know who am I.
                   I’ve to be brave than others. Don’t complain. 
@@ -167,7 +166,7 @@ https://templatemo.com/tm-530-mini-profile
               </div>
 
               <div class="tm-contact-item">
-                <img src="help.jpg" width ="100" height="100"/>
+                <img src="help.jpg" width ="100" height="100" style="align-items : center"/>
                 <p class="mb-0">
                   Keep helping others. I’ve to keep helping many people out there. 
                   Because when the other people happy, I feel I’m a successful girl.
