--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ https://templatemo.com/tm-530-mini-profile
           <div class="col-12">
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-green">
-                <img src="optimistic.PNG" width="200" height="200"/>
+                <img src="optimistic.PNG" width="200" height="200" style="justify-content : center";/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-green">
@@ -93,7 +93,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-orange">
-                <img src="different.jpg" width="200" height="200"/>
+                <img src="different.jpg" width="200" height="200" style="justify-content : center";/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-orange">
@@ -109,7 +109,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-blue">
-                <img src="give.jpg" width="200" height="200"/>
+                <img src="give.jpg" width="200" height="200" style="justify-content : center";/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-blue">
@@ -124,7 +124,7 @@ https://templatemo.com/tm-530-mini-profile
 
             <div class="tm-portfolio-item">
               <div class="tm-portfolio-name text-white tm-bg-dark-gray">
-                <img src="alturism.PNG" width="200" height="200"/>
+                <img src="alturism.PNG" width="200" height="200" style="justify-content : center";/>
               </div>
               <div class="tm-portfolio-description">
                 <h3 class="tm-text-dark-gray">
